--- a/src/DeliveryMQ.Api/DeliveryMQ.Api.csproj
+++ b/src/DeliveryMQ.Api/DeliveryMQ.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Marten" Version="2.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
